chore: update umd test page

--- a/ui/umd-test.html
+++ b/ui/umd-test.html
@@ -28,6 +28,45 @@
         <q-page-container>
           <q-page padding>
             <q-markdown src="This is a `test`."></q-markdown>
+            <q-markdown>
+:::
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+:::
+
+::: info
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+:::
+
+::: info With Custom Title
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+:::
+
+::: tip
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+:::
+
+::: warning
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+:::
+
+::: danger
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+:::
+
+::: danger Embedable
+here be **dragons**
+with a `token` and a [link](https://quasar.dev)
+  ::: warning
+  here be **dragons**
+  with a `token` and a [link](https://quasar.dev)
+::::::
+            </q-markdown>
             <ul class="q-mb-lg">
               <li>In /ui, run: "yarn build"</li>
               <li class="text-red">You need to build & refresh page on each change manually.</li>
