--- a/ui/umd-test.html
+++ b/ui/umd-test.html
@@ -66,6 +66,31 @@ with a `token` and a [link](https://quasar.dev)
   here be **dragons**
   with a `token` and a [link](https://quasar.dev)
 ::::::
+
+Indented code
+
+Inline `code`
+
+    // Some comments
+    line 1 of code
+    line 2 of code
+    line 3 of code
+
+Block code "fences"
+
+```
+Sample text here...
+```
+
+Syntax highlighting
+
+```js
+var foo = function (bar) {
+  return bar++;
+};
+
+console.log(foo(5));
+```
             </q-markdown>
             <ul class="q-mb-lg">
               <li>In /ui, run: "yarn build"</li>
