fix(ie11): This is temporary and won't be available for v2

--- a/demo/src/index.template.html
+++ b/demo/src/index.template.html
@@ -18,7 +18,7 @@
   <body>
     <script>
       (function(){
-        let redirect = sessionStorage.redirect;
+        var redirect = sessionStorage.redirect;
         delete sessionStorage.redirect;
         if (redirect && redirect !== location.href) {
           history.replaceState(null, null, redirect);
